feat: tutorial-viewer 웹서비스 개선 (버그 수정, UX, 콘텐츠 품질)
- fix: StepCheckpoint 미완료 라벨을 행동 유도 문구로 수정
- feat: 404 에러 페이지 추가 (BaseLayout 재사용)
- feat: OG/소셜 메타 태그 추가 (og:title, og:description, twitter:card)
- feat: 목차/체크리스트 heading에 ID 속성 추가
- feat: 인쇄용 스타일시트 추가 (@media print)
- fix: progress.ts 빈 catch 블록에 console.warn 추가
- docs: 7개 튜터리얼 ~200개 코드 블록에 언어 지정자 추가

--- a/docs/튜터리얼3_투자수익률_계산_및_시뮬레이션.md
+++ b/docs/튜터리얼3_투자수익률_계산_및_시뮬레이션.md
@@ -109,14 +109,14 @@
 
 Claude Code에서 다음 프롬프트를 입력합니다:
 
-```
+```text
 강남구 대치동 은마아파트 76㎡의 최근 3년간 실거래가를 조회해줘.
 그리고 현재 시세와 전세가도 함께 확인해줘.
 ```
 
 `mcp-kr-realestate` 플러그인이 실거래가 데이터를 조회하여 다음과 같은 결과를 반환합니다:
 
-```
+```text
 ■ 은마아파트 76㎡ 실거래가 추이 (최근 3년)
 
 | 거래일     | 층  | 매매가(만원)  | 전세가(만원)  |
@@ -137,7 +137,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 투자수익률 계산 프롬프트
 
-```
+```text
 강남구 대치동 은마아파트 76㎡ 투자 수익률을 계산해줘.
 조건은 다음과 같아:
 - 매매가: 28억원
@@ -153,7 +153,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 `data:analyze` 스킬이 다음과 같은 상세 분석을 생성합니다:
 
-```
+```text
 ■ 투자 수익률 분석 결과
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -218,7 +218,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 갭투자 구조
 
-```
+```text
 ┌──────────────────────────────────┐
 │         매매가 28억원             │
 │                                  │
@@ -235,7 +235,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 갭투자 수익률 계산 프롬프트
 
-```
+```text
 갭투자 관점에서 수익률을 분석해줘.
 조건:
 - 매매가: 28억원
@@ -250,7 +250,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 갭투자 수익률
 
-```
+```text
 ■ 갭투자 수익률 분석
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -287,7 +287,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 전세가율이 높을수록 갭이 작아지고, 레버리지 효과가 극대화됩니다.
 
-```
+```text
 ■ 전세가율별 갭투자 수익률 비교 (매매가 28억, 3년 보유, 매도가 32억 가정)
 
 | 전세가율 | 전세가  | 갭(자기자본) | 세후 순수익 | 세후 수익률 | 연환산 수익률 |
@@ -310,7 +310,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 대출 레버리지 프롬프트
 
-```
+```text
 주택담보대출 활용 시 레버리지 효과를 분석해줘.
 조건:
 - 매매가: 28억원
@@ -328,7 +328,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 대출 레버리지 분석
 
-```
+```text
 ■ 대출 레버리지 분석
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -375,7 +375,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 레버리지 비율별 수익률 비교
 
-```
+```text
 ■ LTV별 수익률 비교 (매매가 28억, 금리 4.5%, 보유 3년, 매도가 32억)
 
 | LTV   | 대출금 | 자기자본 | 3년 이자비용 | 세후 순수익 | 세후 수익률 | 연환산  |
@@ -392,7 +392,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 금리 민감도 분석
 
-```
+```text
 ■ 금리별 수익률 변화 (LTV 50%, 보유 3년 기준)
 
 | 대출금리 | 3년 이자비용 | 세후 순수익 | 세후 수익률 |
@@ -413,7 +413,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 취득세 상세 계산
 
-```
+```text
 취득세를 상세하게 계산해줘.
 조건:
 - 매매가 28억원
@@ -423,7 +423,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 취득세 비교
 
-```
+```text
 ■ 주택 수별 취득세 비교 (매매가 28억원, 조정대상지역)
 
 | 구분         | 세율  | 취득세     | 지방교육세  | 농특세    | 합계        |
@@ -439,7 +439,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 양도소득세 상세 계산 프롬프트
 
-```
+```text
 세후 실질 수익률을 계산해줘.
 조건:
 - 매매가: 28억원, 매도가: 32억원
@@ -451,7 +451,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 양도소득세 상세 계산
 
-```
+```text
 ■ 양도소득세 상세 계산 (1주택, 2년 거주, 3년 보유)
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -501,14 +501,14 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 주택 수별 세후 수익률 비교 프롬프트
 
-```
+```text
 1주택자, 2주택자, 3주택자별 세후 수익률을 비교해줘.
 동일 조건 (매매가 28억, 매도가 32억, 보유 3년)으로 비교.
 ```
 
 ### 예상 결과: 주택 수별 세후 수익률 비교
 
-```
+```text
 ■ 주택 수별 세후 수익률 비교
 
 | 구분       | 취득세   | 양도소득세 | 총 세금   | 세후 순수익 | 갭투자 수익률 |
@@ -532,7 +532,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 시나리오 시뮬레이션 프롬프트
 
-```
+```text
 낙관/기본/비관 시나리오로 투자 시뮬레이션을 해줘.
 조건:
 - 매매가 28억 (은마아파트 76㎡)
@@ -548,7 +548,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 시나리오별 시뮬레이션
 
-```
+```text
 ■ 시나리오별 투자 시뮬레이션 (갭투자, 자기자본 13억)
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -590,7 +590,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 손익분기점 분석
 
-```
+```text
 ■ 손익분기점 분석
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -624,7 +624,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 변동 분석 프롬프트
 
-```
+```text
 /finance:variance-analysis
 예상 수익률과 실제 수익률의 차이를 분석해줘.
 데이터:
@@ -643,7 +643,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 예상 결과: 변동 분석 (Variance Analysis)
 
-```
+```text
 ■ 투자수익률 변동 분석 (Variance Analysis)
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -708,7 +708,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 프롬프트
 
-```
+```text
 은마아파트 76㎡의 월세 투자 수익률(Cap Rate)을 계산해줘.
 조건:
 - 매매가: 28억원
@@ -719,7 +719,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 예상 결과
 
-```
+```text
 ■ 월세 투자 수익률 분석
 
  연간 총 임대수익:     250만원 × 12개월 = 3,000만원
@@ -749,7 +749,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 프롬프트
 
-```
+```text
 다주택 포트폴리오의 종합 수익률과 세금 부담을 분석해줘.
 보유 물건:
 1. 강남구 대치동 은마아파트 76㎡ - 매매가 28억, 전세 15억
@@ -760,7 +760,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 예상 결과
 
-```
+```text
 ■ 다주택 포트폴리오 분석
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -818,7 +818,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 프롬프트
 
-```
+```text
 전세로 거주하는 것과 매매 후 보유하는 것의 기회비용을 비교해줘.
 조건:
 - 대상: 은마아파트 76㎡
@@ -833,7 +833,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 #### 예상 결과
 
-```
+```text
 ■ 전세 vs 매매 의사결정 분석 (5년)
 
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -906,7 +906,7 @@ Claude Code에서 다음 프롬프트를 입력합니다:
 
 ### 양도소득세 계산 공식
 
-```
+```text
 과세 대상 양도차익 = 양도차익 × (양도가액 - 12억) / 양도가액   (1주택 비과세 적용 시)
 장기보유특별공제 = 과세 대상 양도차익 × (보유공제율 + 거주공제율)
 과세표준 = 과세 대상 양도차익 - 장기보유특별공제 - 기본공제(250만원)
